[package]
name = "rumble"
version = "0.1.0"
authors = ["sergey"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
tokio = { version = "1.5.0", features = ["rt-multi-thread", "net", "io-util"] }
tokio-rustls = "0.22.0"
protobuf = "2.22.1"
sled = "0.34.6"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
protoc-rust = "2.22.1"

[profile.release]
lto = true
