[package]
name = "rumble"
version = "0.1.0"
authors = ["Sergey Chushin <chushin.sergey@gmail.com>"]
description = "Mumble server written in Rust"
repository = "https://github.com/qarux/rumble"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "net", "io-util", "sync"] }
tokio-rustls = "0.22.0"
protobuf = "2.23.0"
sled = "0.34.6"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
aes = "0.7.3"
rand = "0.8.3"

[build-dependencies]
protoc-rust = "2.23.0"

[profile.release]
lto = true
