[package]
name = "rumble"
version = "0.1.0"
authors = ["Sergey Chushin <chushin.sergey@gmail.com>"]
description = "Mumble server written in Rust"
repository = "https://github.com/qarux/rumble"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
tokio = { version = "1.10.1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"] }
tokio-rustls = "0.22.0"
protobuf = "2.25.1"
dashmap = "4.0.2"
async-trait = "0.1.51"

sled = "0.34.6"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"

ring = "0.16.20"
aes = "0.7.5"
rand = "0.8.4"

log = "0.4.14"
env_logger = "0.9.0"

[build-dependencies]
protobuf-codegen-pure = "2.25.1"

[profile.release]
lto = true
